# tjhlp-checker

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
.github/workflows/: continuous-integration.yml
src/: checker.py  cli.py  config.py
src/tjhlp_checker/: checker.py  cli.py  config.py
tests/: test_header.py  test_structure_checker.py  test_type_checker.py
