[project]
name = "tjhlp-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clang>=20.1.0",
    "pydantic>=2.11.1",
    "typer>=0.15.2",
]

[project.scripts]
tjhlp-checker = "tjhlp_checker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
